--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,8 @@
-
 <div class="container">
   <div class="row">
-  <h1>Hola Mundo</h1>
-
-<p>Eso es un saludo...</p>
-
-<div>
-  {{title}}
-</div>
-
-<div>La suma de 2 + 2 es {{2+2}}</div>
-
-<div>el doble de 3 es {{duplicarNumero(3)}}</div>
-
-<h2>Datos de la Pelicula</h2>
-<div>El nombre de la pelicula es: {{pelicula.nombre}}</div>
-<div>El año de la pelicula es: {{pelicula.fechaLanzamiento|  date:"dd-MM-yy"}}</div>
-<div>El precio de la pelicul es: {{pelicula.precio|currency}}</div>  
+    <h1>IEVN 1003</h1>
+    <app-produt-list></app-produt-list>
+    <hr>
+  
   </div>
 </div>
-
