--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <div class="container">
   <div class="row">
-    <h1>IEVN 1003</h1>
+
+    <!-- <h1>IEVN 1003</h1>
     <app-produt-list></app-produt-list>
-    <hr>
+    <hr> -->
+    <app-operas-bas></app-operas-bas>
   
   </div>
 </div>
