--- a/src/app/product/produt-list/produt-list.component.html
+++ b/src/app/product/produt-list/produt-list.component.html
@@ -8,22 +8,20 @@
         <div class="row">
             <div class="col-md-2">Filtrar por:</div>
             <div class="col-md-4">
-                <input type="text" class="form-control" name="filter">
+                <input [(ngModel)]="listFilter" type="text" class="form-control" name="filter">
             </div>
+
         </div>
         <div class="col-md-6">
-            <h3>Filtro: </h3>
+            <h3>Filtro: {{listFilter}}</h3>
         </div>
     </div>
     <div class="table-responsive">
         <table class="table" *ngIf="productos.length">
             <thead>
                 <tr>
-                    <th>
-                        <button (click)="showImage" type="button"
-                        class="btn bnt-primary"></button> Imagen</th>
-                    
-                    <th>Imagen</th>
+                    <th><button (click)="showImage()" type="button" class="btn btn-primary">{{muestraImg?'Ocultar':'Muestra'}} Imagen</button>
+                        Imagen</th>
                     <th>Modelo</th>
                     <th>Descripcion</th>
                     <th>Año</th>
@@ -32,14 +30,10 @@
                     <th>Color</th>
                 </tr>
             </thead>
-            <tbody> 
-                <tr *ngFor="let producto of productos">
-                    <td><img *ngIf="muestraImg" [src]="producto.imagenUrl"
-                        [title]="producto.Modelo"
-                        [style.width.px]="imageWidth"
-                        [style.margin.px]="imageMargin"
-
-                        ></td>
+            <tbody >
+                <tr *ngFor="let producto of productos | productoFilter:listFilter">
+                    
+                    <td><img *ngIf="muestraImg" [src]="producto.imagenUrl" alt=""  [title]="producto.Modelo" [style.width.px]="imageWidth" [style.margin.px]="imageMargin"></td>
                     <td>{{producto.Modelo}}</td>
                     <td>{{producto.Descripcion}}</td>
                     <td>{{producto.Year}}</td>
