--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,10 @@
 
     <!-- <h1>IEVN 1003</h1>
     <app-produt-list></app-produt-list>
-    <hr> -->
+    <hr> 
     <app-operas-bas></app-operas-bas>
+    <app-ejemplo1></app-ejemplo1>-->
+    <app-cine></app-cine>
   
   </div>
 </div>
