--- a/src/app/formularios/operas-bas/operas-bas.component.html
+++ b/src/app/formularios/operas-bas/operas-bas.component.html
@@ -6,19 +6,20 @@
 <form>
     <div class="form-group">
       <label for="exampleInputEmail1">Numero 1</label>
-      <input type="email" class="form-control" [(ngModel)]="num1" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Numero 1">
+      <input type="number" class="form-control" [(ngModel)]="num1" name="num1" aria-describedby="emailHelp" placeholder="Numero 1">
       
     </div>
     <div class="form-group">
       <label for="exampleInputPassword1">Numero 2</label>
-      <input type="password" class="form-control" [(ngModel)]="num2" id="exampleInputPassword1" placeholder="numero 2">
+      <input type="number" class="form-control" [(ngModel)]="num2" name="num2" placeholder="numero 2">
     </div>
     <div class="form-check">
       <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">revisar</label>
+      
     </div>
-    <button (clic)="sumar()" class="btn btn-primary">enviar</button>
+    <button (clic)="sumar()" class="btn btn-primary">Calcular</button>
   </form>
   <div class>
     <h2>el resultado es: {{resultado}}</h2>
+    
   </div>
