--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,10 @@
     <app-produt-list></app-produt-list>
     <hr> 
     <app-operas-bas></app-operas-bas>
-    <app-ejemplo1></app-ejemplo1>-->
-    <app-cine></app-cine>
+    <app-ejemplo1></app-ejemplo1>
+    <app-cine></app-cine>-->
+    <app-resistencia></app-resistencia>
+
   
   </div>
 </div>
